--- a/web-angular/lib/src/teststart_component.html
+++ b/web-angular/lib/src/teststart_component.html
@@ -4,6 +4,8 @@
 <div>
 <center><h1 class="boxs">生理知识小测试</h1></center>
 <p></p><p></p>
+<h4  class="boxs">&nbsp;&nbsp;&nbsp;&nbsp;下面将根据你所学的知识点进行测试，本次测试一共十道选择题，点击“Test”进入测试：</h4>
+<p></p><p></p>
 <p></p><p></p>
 <p></p><p></p>
 <p></p><p></p>
@@ -14,6 +16,11 @@
 <p></p><p></p><p></p><p></p><p></p><p></p>
 </div>
 <div>
-    <h4  class="boxs">&nbsp;&nbsp;&nbsp;&nbsp;{{test.id}}&nbsp;&nbsp;{{test.testquestions}}</h4>
-    <h4  class="boxs">&nbsp;&nbsp;&nbsp;&nbsp;{{test.A}}&nbsp;&nbsp;{{test.B}}&nbsp;&nbsp;{{test.C}}</h4>
+<center>
+    <button  style="color: rgb(255, 102, 0)">
+        <center><h4 class="boxs">Test</h4></center>
+    </button>
+</center>
+
 </div>
+</body>
