cq merge zxy 6.28

--- a/web-angular/lib/src/score_component.html
+++ b/web-angular/lib/src/score_component.html
@@ -3,7 +3,7 @@
 <div>
 <center><h1 class="boxs">生理知识小测试</h1></center>
 <br />
-<img src="test-start.jpg" width="472" height="216"/>
+<center><img src="test-start.jpg" width="472" height="216"/></center>
 </div>
 
 <div>
