--- a/web-angular/lib/src/teststart_component.html
+++ b/web-angular/lib/src/teststart_component.html
@@ -11,7 +11,7 @@
 <p></p><p></p>
 <p></p><p></p>
 <p></p><p></p>
-<img src="test-start.jpg" width="472" height="216"/>
+<center><img src="test-start.jpg" width="472" height="216"/></center>
 <p></p><p></p><p></p><p></p><p></p><p></p>
 <p></p><p></p><p></p><p></p><p></p><p></p>
 </div>
