--- a/web-angular/lib/src/test_component.html
+++ b/web-angular/lib/src/test_component.html
@@ -13,10 +13,10 @@
         <br /><span class="badge">{{test.id}}{{test.testquestion}}
         </span>   
 
-        <p><rl>{{test.A}}</rl>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <rl>{{test.B}}</rl>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p><rl>{{test.A}}</rl>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <rl>{{test.B}}</rl>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <rl>{{test.C}}</rl></p>
-        <rl><label>yourkey:</label>&nbsp;&nbsp;y<input>{{test.key1}}</rl>
+        <rl><label>yourkey:</label>&nbsp;&nbsp;<input>{{test.key1}}</rl>
     </li>
     <br />
 
@@ -24,9 +24,5 @@
 
 </div>
 
-<div>
-<center><button ><center>Back</center></button>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button><center>Submit</center></button></center>
-</div>
+
 </body>
