--- a/web-angular/lib/src/card_component.html
+++ b/web-angular/lib/src/card_component.html
@@ -1,4 +1,5 @@
 <body>
+  <center>
 <div class="container">
   <div class="leftpart"></div>
       <div class="search"></div>
@@ -33,5 +34,5 @@
       </div>
   <div class="rightpart"></div>
 
-</div>
+</div></center>
 </body>
