--- a/myangular/web/score.html
+++ b/myangular/web/score.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>myangular</title>
+    <title>Loveyourself</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="score.css">
-    <link rel="icon" type="image/png" href="test-start.jpg">
+    <link rel="icon" type="image/png" href="favicon.png">
     <script defer src="main.dart.js"></script>
   </head>
 <body>
@@ -29,7 +28,7 @@
 
 </div>
 <div>
-    <center><button><center><a href="index.html">Back</a></center></button></center>
+    <center><button><center><a href="index.html">返回首页</a></center></button></center>
 </div>
 </body>
 </html>
