--- a/myangular/web/test.html
+++ b/myangular/web/test.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>myangular</title>
+    <title>Loveyourself</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+ 
     <link rel="stylesheet" href="test.css">
-    <link rel="icon" type="image/png" href="test-start.jpg">
+    <link rel="icon" type="image/png" href="favicon.png">
     <script defer src="test.dart.js"></script>
   </head>
 
   <body>
      
     <div>
+        <div id="uppart">
         <center><h1 class="boxs">生理知识小测试</h1></center>
         <br />
         <center><img src="test-start.jpg" width="472" height="216"/></center>
         </div>
-        
-
-            <div id="testList">    
+        <center><div id="downpart">
+           <div id="testList">    
                 <!--
         <div>
         <ul class="tests"><br />
@@ -38,8 +38,12 @@
         </ul>-->
 
         </div>
+      </div></center>
         <div>
-            <center><button><center><a href="score.html">Submit</a></center></button></center>
+            <center>
+              <button><a href="index.html">返回主页</a>
+              <button><a href="score.html">提交答案</a></button>
+            </center>
         </div>
 </div>
 
