--- a/myangular/web/test.html
+++ b/myangular/web/test.html
@@ -41,7 +41,7 @@
       </div></center>
         <div>
             <center>
-              <button><a href="index.html">返回主页</a>
+              <button><a href="index.html">返回首页</a></button>
               <button><a href="score.html">提交答案</a></button>
             </center>
         </div>
