--- a/myangular/web/teststart.html
+++ b/myangular/web/teststart.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>myangular</title>
+    <title>Loveyourself</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="teststart.css">
-    <link rel="icon" type="image/png" href="test-start.jpg">
+    <link rel="icon" type="image/png" href="favicon.png">
     <script defer src="main.dart.js"></script>
   </head>
 
@@ -14,7 +13,8 @@
 <div>
 <center><h1 class="boxs">生理知识小测试</h1></center>
 <p></p><p></p>
-<h4  class="boxs">&nbsp;&nbsp;&nbsp;&nbsp;下面将根据你所学的知识点进行测试，本次测试一共十道选择题，点击“Test”进入测试：</h4>
+<center><h4  class="boxs">&nbsp;&nbsp;&nbsp;&nbsp;下面将根据你所学的知识点进行测试，本次测试一共十道选择题，点击“开始测试”进入测试：</h4></center>
+
 <p></p><p></p>
 <p></p><p></p>
 <p></p><p></p>
@@ -26,7 +26,8 @@
 <p></p><p></p><p></p><p></p><p></p><p></p>
 </div>
 <div>
-    <center><button><center><a href="test.html">Test</a></center></button></center>
+    <center><button><a href="index.html">返回首页</a></button>
+      <button><a href="test.html">开始测试</a></button></center>
 </div>
 </body>
 </html>
